--- a/Lab_Shahid_Ahamed_Hasib.ipynb
+++ b/Lab_Shahid_Ahamed_Hasib.ipynb
@@ -1174,16 +1174,16 @@
       "outputs": [],
       "source": [
         "class LSTMCell(nn.Module):  # Defines a single LSTM cell.\n",
-        "    def __init__(self, in_dim, hidden_dim, **kwargs):  # Initialize the LSTM cell with input and hidden dimensions.\n",
-        "        super(LSTMCell, self).__init__(**kwargs)  # Call the parent class constructor to properly initialize the module.\n",
-        "        self.in_to_gates = nn.Linear(in_dim, hidden_dim * 4, bias=True)  # Fully connected layer for input-to-gate computations (combines input to all 4 gates).\n",
-        "        self.hidden_to_gates = nn.Linear(hidden_dim, hidden_dim * 4, bias=False)  # Fully connected layer for hidden-to-gate computations.\n",
+        "    def __init__(self, in_dim, hidden_dim, **kwargs):  # Initialize the LSTM cell with input and hidden dimensions\n",
+        "        super(LSTMCell, self).__init__(**kwargs)  # Call the parent class constructor to properly initialize the module\n",
+        "        self.in_to_gates = nn.Linear(in_dim, hidden_dim * 4, bias=True)  # Fully connected layer for input-to-gate computationn, combines input to all 4 gates\n",
+        "        self.hidden_to_gates = nn.Linear(hidden_dim, hidden_dim * 4, bias=False)  # Fully connected layer for hidden-to-gate computations\n",
         "\n",
-        "    def forward(self, input, hidden):  # Define the forward pass for the LSTM cell.\n",
-        "        hx, cx = hidden  # Unpack the hidden state (`hx` for hidden state, `cx` for cell state).\n",
-        "        gates = self.in_to_gates(input) + self.hidden_to_gates(hx)  # Compute the gate activations by summing input and hidden contributions.\n",
+        "    def forward(self, input, hidden):  # Define the forward pass for the LSTM cell\n",
+        "        hx, cx = hidden  # Unpack the hidden state, `hx` for hidden state, `cx` for cell state\n",
+        "        gates = self.in_to_gates(input) + self.hidden_to_gates(hx)  # Compute the gate activations by summing input and hidden contributions\n",
         "\n",
-        "        # Split the combined gate activations into 4 components: input gate, forget gate, candidate cell state, and output gate.\n",
+        "        # Split the combined gate activations into 4 components: input gate, forget gate, candidate cell state, and output gate\n",
         "        ingate, forgetgate, cellgate, outgate = gates.chunk(4, 1)\n",
         "\n",
         "        #\n",
@@ -1191,15 +1191,15 @@
         "        #\n",
         "        # Implement the LSTM equations\n",
         "        #\n",
-        "        ingate = torch.sigmoid(ingate)  # Input gate: decides how much of the input should influence the cell state.\n",
-        "        forgetgate = torch.sigmoid(forgetgate)  # Forget gate: decides how much of the previous cell state to forget.\n",
-        "        cellgate = torch.tanh(cellgate)  # Candidate cell state: represents potential updates to the cell state.\n",
-        "        outgate = torch.sigmoid(outgate)  # Output gate: decides how much of the cell state to expose to the hidden state.\n",
+        "        ingate = torch.sigmoid(ingate)  # Input gate: decides how much of the input should influence the cell state\n",
+        "        forgetgate = torch.sigmoid(forgetgate)  # Forget gate: decides how much of the previous cell state to forget\n",
+        "        cellgate = torch.tanh(cellgate)  # Candidate cell state: represents potential updates to the cell state\n",
+        "        outgate = torch.sigmoid(outgate)  # Output gate: decides how much of the cell state to expose to the hidden state\n",
         "\n",
-        "        cy = forgetgate * cx + ingate * cellgate  # Update the cell state (`cy`) by combining forget gate, previous cell state, input gate, and candidate cell state.\n",
-        "        hy = outgate * torch.tanh(cy)  # Compute the new hidden state (`hy`) using the output gate and the updated cell state.\n",
+        "        cy = forgetgate * cx + ingate * cellgate  # Update the cell state (`cy`) by combining forget gate, previous cell state, input gate, and candidate cell state\n",
+        "        hy = outgate * torch.tanh(cy)  # Compute the new hidden state (`hy`) using the output gate and the updated cell state\n",
         "\n",
-        "        return hy, cy  # Return the new hidden state and cell state."
+        "        return hy, cy  # Return the new hidden state and cell state"
       ]
     },
     {
@@ -1345,21 +1345,6 @@
       "source": [
         "RNN with long sequences:"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Explanation\n",
-        "\n",
-        "Loss Function Behavior: The loss function (blue) decreases rapidly at the start, indicating effective initial learning. As training continues, the rate of decline slows, and the loss begins to plateau, reflecting the model nearing its performance limit under the given training conditions.\n",
-        "\n",
-        "Gradient Norm Variability: The gradient norm (orange) fluctuates significantly during the early stages of training, as the network adjusts to steep gradients in the loss landscape. These fluctuations reduce over time, signaling that training is becoming more stable.\n",
-        "\n",
-        "Sequence Length and Learning Stability: The annotation \"increasing seq length to: 200\" indicates the RNN is trained on longer sequences as it progresses. The graph does not display significant disruptions in loss or gradient norm near this point, suggesting that the model is adapting well to the increased sequence length without major stability issues."
-      ],
-      "metadata": {
-        "id": "k6fTbiAm_BAv"
-      }
     },
     {
       "cell_type": "code",
